k8s/front-end-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lugx-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lugx-frontend
  template:
    metadata:
      labels:
        app: lugx-frontend
    spec:
      containers:
        - name: frontend
          image: jenuk/lugx-frontend:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: lugx-frontend-service
spec:
  selector:
    app: lugx-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
